# mimic

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.old.md  Makefile  README.md  _release.cmd  build_release.cmd  publish_release.sh  verify_isolated.cmd
.cursor/rules/: build-release.mdc  cpp-backend.mdc  monitor-web.mdc  project-core.mdc
agent/: build.cmd
agent/include/: action_mapper.hpp  agent.hpp
agent/src/: action_mapper.cpp  action_mapper.hpp  agent.cpp  agent.hpp  build.cmd  main.cpp
android/: README.md  package.json  version.json
android/setup/: mimic-version.gradle.kts
capture/: build.cmd  build_capture_lib.cmd
capture/include/: capture.hpp  capture_internal.h  capture_methods.h  capture_wgc_ffi.h
capture/src/: build.cmd  capture.hpp  capture_auto.cpp  capture_common.cpp  capture_desktop.cpp  capture_dxgi.cpp  capture_gdi.cpp  capture_h264.cpp  capture_pw.cpp  capture_screen.cpp  capture_single.cpp  capture_stream.cpp  capture_wgc.cpp  capture_wgc_ffi.cpp  preprocess.cpp  preprocess.hpp  test_capture.cpp
common/: signals.cpp  signals.hpp  types.hpp
common/include/: stream_protocol.hpp
common/payload/: bgra.hpp
common/transport/: pipe.hpp  tcp.hpp
config/: settings.default.json
docs/: auto-update.md
examples/: README.md  cpp_pipe_send.cpp  cpp_sender.hpp  cpp_tcp_send.cpp  hello_cpp_send.cpp  hello_python_recv.py  hello_rust_recv.rs  hello_tcp_send.cpp  python_tcp_recv.py  rust_pipe_recv.rs
game/: build.cmd
game/include/: board.hpp  tui.hpp
game/src/: Makefile  board.cpp  build.cmd  config.cpp  config.hpp  main.cpp  network.cpp  network.hpp  (+1 more)
input/: build.cmd  build_input_lib.cmd
installer/: setup.iss
logger/: build_logger_lib.cmd  logger.cpp  logger.h  logger.rs
model/: __init__.py  action_space.py  generic_agent.py  hierarchical.py  stream_protocol.py
monitor/: build.cmd
monitor/src/: CMakeLists.txt  appwindow.h  appwindow.slint  build.cmd  main.cpp  main_interpreter.cpp  setup.cmd  setup.ps1
monitor_app/: build.cmd  build_dev.cmd
monitor_web/: CLAUDE.md  README.md  package-lock.json  vite.config.ts
monitor_web/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
monitor_web/src-tauri/.cargo/: config.toml
monitor_web/src-tauri/capabilities/: default.json
monitor_web/src-tauri/src/: h264_encoder.rs  main.rs  mjpeg_server.rs  protocol.rs  shared_texture.rs  stream_protocol.rs
monitor_web/src-tauri/src/payload/: bgra.rs  mod.rs
monitor_web/src-tauri/src/transport/: pipe.rs
protocol/: protocol.h  protocol.py  protocol.rs
scripts/: Build-Android.ps1  Build.ps1  New-SigningKey.ps1  New-VersionJson.ps1  Pack-MimicAndroid.ps1  Publish-Cdn.ps1  Publish.ps1  Release.ps1
server/: package.json  server.js
test/: analyze_bench.py  build_bench.cmd  wgc_bench_capture.cpp
test_target/: build.cmd  test_target.cpp
tools/: make_app_icon.py
updater/: updater.cpp
(+152 files in other folders)
